hard-gists/d45259ce3f8e4c226846d2f31bf719f5/run.log
=== Docker Run Log for d45259ce3f8e4c226846d2f31bf719f5 ===
Started at: Mi 29. Okt 20:25:13 CET 2025

[2025-10-29 20:25:14] START: Running container for d45259ce3f8e4c226846d2f31bf719f5
[2025-10-29 20:25:14] SUCCESS: Container e9b914c07f625531f3d48d10f20b5c2840c9a24c30f0d7d0a97d0255e75d6611 started for d45259ce3f8e4c226846d2f31bf719f5
=== Container logs for d45259ce3f8e4c226846d2f31bf719f5 ===
  File "/snippet.py", line 56
    print v1, v2, func
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d45259ce3f8e4c226846d2f31bf719f5 ===
[2025-10-29 20:25:16] INFO: Container e9b914c07f625531f3d48d10f20b5c2840c9a24c30f0d7d0a97d0255e75d6611 has stopped
